--- a/templates/create.html
+++ b/templates/create.html
@@ -5,7 +5,7 @@
     <h1>New Game!</h1>
     <p>
       Send the code
-      <a href="{{ url_for('game_data', game_code=game_code) }}">
+      <a href="{{ url_for('game_lobby', game_code=game_code) }}">
         <b> {{ game_code }} </b>
       </a>
        to your friends to get started!
