--- a/templates/game.html
+++ b/templates/game.html
@@ -54,7 +54,7 @@
 
   var wordBoardData = words.map(function(word) {
     return {
-      word: word,
+      word: word
     };
   });
 
@@ -73,7 +73,7 @@
     data: {
       boardSize: boardSize,
       wordBoardData: wordBoardData,
-      mapBoardData: mapBoardData,
+      mapBoardData: mapBoardData
     }
   });
 </script>
