adding how to play page

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,6 @@
   <div class="menu">
     <a href="{{ url_for('join_game') }}" class="pseudo button icon-picture">Join</a>
     <a href="{{ url_for('create_game') }}" class="pseudo button icon-picture">Create</a>
-    <a href="#" class="pseudo button icon-picture">How to Play</a>
+    <a href="{{ url_for('how_to_play') }}" class="pseudo button icon-picture">How to Play</a>
   </div>
 </nav>
