--- a/templates/header.html
+++ b/templates/header.html
@@ -8,8 +8,8 @@
   <label for="bmenub" class="burger pseudo button">menu</label>
 
   <div class="menu">
-    <a href="{{ url_for('join_game') }}" class="pseudo button icon-picture">Join</a>
-    <a href="{{ url_for('create_game') }}" class="pseudo button icon-picture">Create</a>
+    <a href="{{ url_for('create.join_game') }}" class="pseudo button icon-picture">Join</a>
+    <a href="{{ url_for('create.create_game') }}" class="pseudo button icon-picture">Create</a>
     <a href="{{ url_for('how_to_play') }}" class="pseudo button icon-picture">How to Play</a>
   </div>
 </nav>
