--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -18,6 +18,9 @@ td img {
 .error-text {
   color: red;
 }
+.error-container {
+  width: 595px;
+}
 .fade-enter-active, .fade-leave-active {
   transition: opacity .5s;
 }
@@ -58,12 +61,14 @@ td img {
     </div>
     <button class="success" v-on:click="switchTeams">Switch teams</button>
     <button class="warning" v-on:click="startGame">Start Game</button>
+  </center>
+  <div class="error-container">
     <transition-group name="list" tag="p">
       <p v-for="error in errors" class="error-text" v-bind:key="error">
         {{ "Error: " + error }}
       </p>
     </transition-group>
-  </center>
+  </div>
 </div>
 {% endraw %}
 {% endblock %}
@@ -91,6 +96,7 @@ td img {
           <td>
             <select style="width: 150px; visibility: hidden;"></select>
           </td>
+
         </tr>
       </template>
       <template v-else>
@@ -101,12 +107,12 @@ td img {
           </td>
           <td>
             <select v-if="player.id === playerid" class="table-content" style="width: 150px" v-on:change="onChange" v-bind:value="player.role">
-              <option>SPYMASTER</option>
-              <option>PLAYER</option>
+              <option>Spymaster</option>
+              <option>Player</option>
             </select>
             <select v-else class="table-content" style="width: 150px" disabled v-bind:value="player.role">
-              <option>SPYMASTER</option>
-              <option>PLAYER</option>
+              <option>Spymaster</option>
+              <option>Player</option>
             </select>
           </td>
         </tr>
@@ -117,8 +123,16 @@ td img {
 {% endraw %}
 <script type="text/javascript" charset="utf-8">
   var COOKIE_ID = 'CN_ID';
-  var avatarUri = {{ url_for('static', filename='img/avatar/')|tojson }};
-  var gameCode = {{ game_code|tojson }};
+  var EVENT_SWITCH_ROLE = {{ LobbyEvent.SWITCH_ROLE.value|tojson|safe }};
+  var EVENT_SWITCH_TEAM = {{ LobbyEvent.SWITCH_TEAM.value|tojson|safe }};
+  var EVENT_CONNECT = {{ LobbyEvent.CONNECT.value|tojson|safe }};
+  var EVENT_UPDATE = {{ LobbyEvent.UPDATE.value|tojson|safe }};
+  var EVENT_SET_ID = {{ LobbyEvent.SET_ID.value|tojson|safe }};
+  var EVENT_START_GAME = {{ LobbyEvent.START_GAME.value|tojson|safe }};
+  var EVENT_INIT_START_GAME = {{ LobbyEvent.INIT_START_GAME.value|tojson|safe }};
+
+  var avatarUri = {{ url_for('static', filename='img/avatar/')|tojson|safe }};
+  var gameCode = {{ game_code|tojson|safe }};
   var players = [];
   var errors = [];
 
@@ -136,7 +150,7 @@ td img {
     },
     methods: {
       onChange: function(value) {
-        socket.emit('player switch role');
+        socket.emit(EVENT_SWITCH_ROLE);
       }
     }
   });
@@ -148,7 +162,7 @@ td img {
       avatarUri: avatarUri,
       gameCode: gameCode,
       players: players,
-      errors: errors,
+      errors: errors
     },
     computed: {
       bluePlayers: function() {
@@ -164,10 +178,10 @@ td img {
     },
     methods: {
       switchTeams: function(event) {
-        socket.emit('player switch team');
+        socket.emit(EVENT_SWITCH_TEAM);
       },
       startGame: function(event) {
-          socket.emit('start game');
+        socket.emit(EVENT_INIT_START_GAME);
       }
     }
   });
@@ -175,18 +189,18 @@ td img {
   // Handles the initial connection of the player
   socket.on('connect', function() {
     var oldId = Cookies.get(COOKIE_ID);
-    socket.emit('player connect', {
-      'oldId': oldId
+    socket.emit(EVENT_CONNECT, {
+      {{ old_id_key|tojson|safe }}: oldId
     });
   });
 
-  socket.on('player id', function(playerId) {
+  socket.on(EVENT_SET_ID, function(playerId) {
     Lobby.playerId = playerId;
     Cookies.set(COOKIE_ID, playerId);
   });
 
   // Handles initialization of lobby data
-  socket.on('update', function(data) {
+  socket.on(EVENT_UPDATE, function(data) {
     // clear the players list
     players.splice(0, players.length);
 
@@ -196,8 +210,8 @@ td img {
     });
   });
 
-  socket.on('start', function(data) {
-     window.location.replace(data); 
+  socket.on(EVENT_START_GAME, function(data) {
+     window.location.replace(data);
   });
 
   socket.on('error', function(error) {
