--- a/templates/game.html
+++ b/templates/game.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 {% raw %}
-<div id="app">
+<div v-cloak id="app">
   <h2>{{ playerRole }}</h2>
   <board :data="deck" :size="boardSize"></board>
   <br/><br/>
